--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,6 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "devcontainers"
-    directory: "/devcontainer"
+    directory: "/.devcontainer"
     schedule:
       interval: "weekly"
