--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
   name: material
   locale: ru
   logo: assets/logo.svg
+  favicon: assets/favicon.png
 
   features:
     - content.code.copy
